# kythe-ios-example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  index_from_bazel.rb
ios/: BUILD.bazel
ios/App/: main.m
ios/ModuleA/: AObject+Extensions.h  AObject+Extensions.m  AObject.h  AObject.m
ios/ModuleB/: BObject.h  BObject.m
tools/toolchains/xcode_configure/: README.md
