xcode_version(
    name = "version15_1_0_15C65",
    aliases = [
        "15.1.0.15C65",
        "15.1.0",
        "15.1",
        "15.0",
        "15",
    ],
    default_ios_sdk_version = "17.2",
    default_macos_sdk_version = "14.2",
    default_tvos_sdk_version = "17.2",
    default_watchos_sdk_version = "10.2",
    version = "15.1.0.15C65",
)

xcode_config(
    name = "host_xcodes",
    default = ":version15_1_0_15C65",
    versions = [
        ":version15_1_0_15C65",
    ],
    visibility = ["//visibility:public"],
)

available_xcodes(
    name = "host_available_xcodes",
    default = ":version15_1_0_15C65",
    versions = [
        ":version15_1_0_15C65",
    ],
)
